fix: don't hide the smart macro editor autocomplete popup
Had to refactor h1 header to use padding instead of margin to remove extra scrollbars of macro page.

--- a/packages/uhk-web/src/app/components/macro/edit/macro-edit.component.scss
+++ b/packages/uhk-web/src/app/components/macro/edit/macro-edit.component.scss
@@ -33,7 +33,6 @@
 }
 
 .macro-container {
-    overflow: auto;
     padding-right: math.div($grid-gutter-width, 2);
 }
 
