--- a/packages/uhk-web/src/styles/_global.scss
+++ b/packages/uhk-web/src/styles/_global.scss
@@ -74,7 +74,7 @@ ul.no-indent {
 }
 
 .h1, .h2, .h3, h1, h2, h3 {
-    margin-top: 10px;
+    padding-top: 10px;
 }
 
 input {
